feat: add review functionality and email verification
- Implemented ReviewController to handle review queries by shop and user.
- Created ReviewService to manage review logic and interactions with the database.
- Added ReviewRepository for database operations related to reviews.
- Introduced DTOs for reviews, user profiles, and vouchers to facilitate data transfer.
- Developed MailEmailService for sending email verification codes using SMTP.
- Added configuration for email sending and created a test for QQ SMTP mail sending.
- Updated database schema to support email login by altering user tables and renaming related tables.
- Added local-secrets.properties.example for environment variable configuration.